--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lighthouse": "^12.8.0",
     "tailwindcss": "^3.4.0",
     "terser": "^5.43.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "xml2js": "^0.6.2"
   },
   "engines": {
     "node": ">=22.0.0"
