--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,28 @@
       "destination": "https://free-government-phone.org/:path*",
       "permanent": true
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/",
+      "has": [
+        {
+          "type": "host",
+          "value": "(?<city>[a-z0-9-]+)-(?<state>[a-z]{2})\\.(?<domain>.*)"
+        }
+      ],
+      "destination": "/:state/:city/"
+    },
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "(?<city>[a-z0-9-]+)-(?<state>[a-z]{2})\\.(?<domain>.*)"
+        }
+      ],
+      "destination": "/:state/:city/:path*"
+    }
   ]
 }
 
